<resources>
    <string name="app_name">Unipin</string>
    <string name="action_settings">Settings</string>
    <string name="adult_autism">Adult with autism or sensory processing disorder parent</string>
    <string name="parent">Parent</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>


    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="facebook_app_id">842652525921272</string>
    <string name="fb_login_protocol_scheme">fb842652525921272</string>

    <string name="intro_message">
        <![CDATA[


            This sample uses the PlaceAutocomplete Activity from the Places API for Android to open
            a fullscreen autocomplete widget when the button is pressed.


        ]]>
    </string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="about_us">The purpose of the Unipin app is to provide users who have sensory processing disorder
    difficulties with the ability to access information about the sensory-friendliness of different places
    in the Baltimore community and surrounding areas. \n\n We also wanted users to be able to leave
    their own feedback about the accesibility of their community aroung them. Our goal is that
    the app is both useful for users and raises awareness about the importanc eof an accessible
    community for all.</string>


    <string name="log_out_question">Q: How do I log out?</string>
    <string name="log_out_answer">A: After you login, on the top left corner there will be three bars.
        Click on the bar to open a navigation drawer. In the navigation drawer, select settings and
        select log out button in the settings activity.</string>

    <string name="review_edit_question">Q: How do I update or delete my review?</string>
    <string name="review_edit_answer">A: After you login, on the top left corner there will be
        three bars.Click on the bar to open a navigation drawer. In the navigation drawer, select my
    reviews to open reviews activity. In this page, you can update or delete all your reviews by
    clicking on one of your reviews.</string>

    <string name="none">Q: I can\'t find my answer</string>
    <string name="none_answer">A: If the answers provided did not answer your question, you can
        contact us from the contact us page at the top right corner</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="about">About us</string>
    <string name="bannerId">ca-app-pub-2466378354363368/4862142775</string>
    <string name="rewardId">ca-app-pub-2466378354363368/1104802536</string>
    <string name="noise">Noise Level</string>
    <string name="light">Lighting</string>
    <string name="visual">Visual Input</string>
    <string name="smell">Smell</string>
    <string name="crowd">Crowding</string>
    <string name="contact">Contact Us</string>
    <string name="overall">Overall</string>
    <string name="address">Address</string>
    <string name="website">website</string>
    <string name="silent">Hmm, seems silent in here.</string>
    <string name="congrats">Congratulations</string>
    <string name="won_points">You have won some points</string>
    <string name="points">Points</string>
    <string name="wrote_review">Wrote a review</string>
    <string name="five">5</string>
    <string name="review_description_points">Review with description</string>
    <string name="total">Total</string>
    <string name="look_up">Look\n up \nreviews</string>
    <string name="special_occasion">Special Occasion!</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="dont_have_acc">Don\'t have an account? Create one.</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="take_photo">Take photo</string>
    <string name="you_are">You are:</string>
    <string name="upload_image">upload image</string>
    <string name="contact_info">When sending the email, try not to edit the default values that appear on the message portion of the email. It helps us answer or solve your question easily. Also, before asking a question, check the Help page for common answers. While typing your message, being specific about the question or issue would be greatly appreciated.</string>
    <string name="if_question_contact">If it is a question, read this before sending.</string>
    <string name="message">Message</string>
    <string name="send_email">Send Email</string>
    <string name="subject">Subject</string>
    <string name="zero">0</string>
    <string name="level">Level</string>
    <string name="no_of_reviews">No. of reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="look_up_reviews">Write or look up reviews</string>

</resources>
