<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom">

    <ListView
        android:id="@+id/list_user_reviews"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/look_user_reviews"
        android:layout_alignParentStart="true" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/search_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerInParent="true"
        android:contentDescription="@null"
        android:src="@drawable/search" />

    <TextView
        android:id="@+id/silent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_image"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/silent"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/write_user_reviews"
        android:layout_width="175dp"
        android:text="@string/write_a_review"
        android:layout_height="wrap_content"
        android:layout_below="@+id/silent"
        android:layout_centerHorizontal="true"
        android:background="@color/turquoise" />

    <Button
        android:id="@+id/look_user_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView5"
        android:background="@color/turquoise"
        android:text="@string/look_up_reviews"
        android:visibility="invisible" />
</RelativeLayout>